<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.regson.netwalkgame.MainMenuActivity">

    <Button
        android:text="@string/view_highscores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnHScores"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnNewGame"
        android:layout_above="@+id/btnHScores"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/how_to_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnHelp"
        android:layout_below="@+id/btnHScores"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:contentDescription="@string/settings_image"
        android:id="@+id/btnSettings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/settingsbtn"
        android:elevation="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/netwalk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:textSize="50sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/holo_blue_dark" />

    <TextView
        android:text="@string/i7469693"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSettings"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="48dp"
        android:id="@+id/id" />

</RelativeLayout>
