<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.regson.netwalkgame.GameActivity">

    <TextView android:text="@string/moves_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtmoveCounter"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="144dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:textSize="24sp"
        android:textColor="@android:color/holo_blue_dark" />

    <Button
        android:text="@string/new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:id="@+id/buttonNewGame"
        android:layout_below="@+id/txtMsg"
        android:layout_centerHorizontal="true" />

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chronometer"
        android:layout_marginEnd="22dp"
        android:textSize="24sp"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_alignBaseline="@+id/txtmoveCounter"
        android:layout_alignBottom="@+id/txtmoveCounter"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtMsg"
        android:textSize="24sp"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_alignBaseline="@+id/chronometer"
        android:layout_alignBottom="@+id/chronometer"
        android:layout_toStartOf="@+id/chronometer"
        android:layout_marginEnd="56dp" />
</RelativeLayout>
